// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchComponent> Debe mostrar batman y el input con el valor del query string 1`] = `
<div>
  <h1>
    Search
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-sm-3"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          type="text"
          value="batman"
        />
        <button
          className="btn btn-primary mt-3"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-sm-9"
    >
      <div
        className="row animate__animated animate__fadeIn"
      >
        <div
          className="col-sm-4 my-3"
        >
          <div
            className="card"
          >
            <img
              alt="Batman"
              className="card-img-top"
              src="./assets/heroes/dc-batman.jpg"
            />
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Batman
              </h5>
              <p
                className="card-text"
              >
                DC Comics
              </p>
              <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                More Info
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchComponent> Debe mostrar el Snapshot 1`] = `
<div>
  <h1>
    Search
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-sm-3"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          className="btn btn-primary mt-3"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-sm-9"
    >
      <div
        className="row animate__animated animate__fadeIn"
      >
        <div
          className="alert alert-info"
        >
          Enter a hero name
        </div>
      </div>
    </div>
  </div>
</div>
`;
